feat: update dependencies and adapt code; rename package

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -48,7 +48,7 @@
         "message": "⭐️ Rate this extension if you like it"
     },
     "help_translating_link_text": {
-        "message": "🈯 Help translating Extension Reloader into the language you know"
+        "message": "🈯 Help translating Advanced Extension Reloader into the language you know"
     },
     "facebook_page_link_text": {
         "message": "🖼️ Follow my Facebook page"
