feat: translate en messages to ru

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,8 +1,110 @@
 {
     "description": {
-        "message": "Описание приложения."
+        "message": "Перезагрузагружайте распакованное расширение в один клик, горячей клавишей или автоматически."
     },
-    "settings_title_text": {
-        "message": "Настройки"
+    "soft_context_menu_item": {
+        "message": "soft"
+    },
+    "hard_context_menu_item": {
+        "message": "hard"
+    },
+    "one_tab_context_menu_item": {
+        "message": "one tab"
+    },
+    "all_tabs_context_menu_item": {
+        "message": "all tabs"
+    },
+    "ports_help_text": {
+        "message": "Порты, разделяемые запятыми, которые должны ожидать сообщения для перезагрузки расширений. Если вы разрабатываете несколько расширений одновременно, вам понадобится несколько портов."
+    },
+    "click_action_help_text": {
+        "message": "Объект, определяющий, что происходит, когда вы кликаете на иконку расширения или используете горячую клавишу \"Перезагрузить расширение (основное действие)\", которую можно изменить пройдя по следующей ссылке: chrome://extensions/shortcuts.\n\nВозможные свойства:\n\nhard: boolean\nСледует ли перезагружать расширение. Если установлено значение false, фоновая страница не будет перезагружена. manifest.json не будет перезагружен, даже если установленно значение true. Если вы хотите перезагрузить этот файл, делайте это обычным способом. Может быть совмещено с свойством \"all tabs\".\n\nall tabs: boolean\nСледует ли перезагружать все вкладки, а не просто текущую.\n\next_id: string || false\nId расширения для перезагрузки в \"hard\" режиме. Если значение опущено или false, все расширения будут перезагружены.\n\nExample:\n\n{\n    \"all tabs\": false,\n    \"hard\": true,\n    \"ext_id\": \"ffhljpfecjcfjdaneehmhdgplkaafnbb\"\n}"
+    },
+    "reload_actions_help_text": {
+        "message": "Массив объектов с той же схемой, что и в \"Действие при клике на иконку расширения\", который определяет дополнительные действия перезагрузки, которые появляются в контекстном меню иконки расширения. Имейте в виду, что количество элементов в контекстном меню ограничено. Вы также можете использовать эти действия перезагрузки, используя одну из горячих клавиш \"Перезагрузить расширение X\", где X - позиция в массиве."
+    },
+    "ports_label_text": {
+        "message": "Порты"
+    },
+    "click_action_label_text": {
+        "message": "Действие при клике на иконку расширения"
+    },
+    "reload_actions_label_text": {
+        "message": "Действия контекстного меню иконки расширения"
+    },
+    "rate_chrome_link_href": {
+        "message": "https://chrome"
+    },
+    "rate_edge_link_href": {
+        "message": "https://edge"
+    },
+    "rate_opera_link_href": {
+        "message": "https://opera"
+    },
+    "rate_firefox_link_href": {
+        "message": "https://firefox"
+    },
+    "reload_main_hotkey": {
+        "message": "Перезагрузить расширение (основное действие)"
+    },
+    "reload_1_hotkey": {
+        "message": "Перезагрузить расширение 1"
+    },
+    "reload_2_hotkey": {
+        "message": "Перезагрузить расширение 2"
+    },
+    "reload_3_hotkey": {
+        "message": "Перезагрузить расширение 3"
+    },
+    "reload_4_hotkey": {
+        "message": "Перезагрузить расширение 4"
+    },
+    "reload_5_hotkey": {
+        "message": "Перезагрузить расширение 5"
+    },
+    "reload_6_hotkey": {
+        "message": "Перезагрузить расширение 6"
+    },
+    "reload_7_hotkey": {
+        "message": "Перезагрузить расширение 7"
+    },
+    "reload_8_hotkey": {
+        "message": "Перезагрузить расширение 8"
+    },
+    "reload_9_hotkey": {
+        "message": "Перезагрузить расширение 9"
+    },
+    "reload_10_hotkey": {
+        "message": "Перезагрузить расширение 10"
+    },
+    "reload_11_hotkey": {
+        "message": "Перезагрузить расширение 11"
+    },
+    "reload_12_hotkey": {
+        "message": "Перезагрузить расширение 12"
+    },
+    "reload_13_hotkey": {
+        "message": "Перезагрузить расширение 13"
+    },
+    "reload_14_hotkey": {
+        "message": "Перезагрузить расширение 14"
+    },
+    "reload_15_hotkey": {
+        "message": "Перезагрузить расширение 15"
+    },
+    "reload_16_hotkey": {
+        "message": "Перезагрузить расширение 16"
+    },
+    "reload_17_hotkey": {
+        "message": "Перезагрузить расширение 17"
+    },
+    "reload_18_hotkey": {
+        "message": "Перезагрузить расширение 18"
+    },
+    "reload_19_hotkey": {
+        "message": "Перезагрузить расширение 19"
+    },
+    "reload_20_hotkey": {
+        "message": "Перезагрузить расширение 20"
     }
 }
