feat: update reload logic

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -23,6 +23,9 @@
     "ports_help_text": {
         "message": "Порты, разделяемые запятыми, которые должны ожидать сообщения для перезагрузки расширений. Если вы разрабатываете несколько расширений одновременно, вам понадобится несколько портов."
     },
+    "full_reload_timeout_help_text": {
+        "message": "Время, которое следует ждать подтвреждения начала перезагрузки расширения с помощью browser.runtime.reload();. Если подтверждение не получено, расширение будет перезагружено с помощью browser.management.setEnabled(id, false); browser.management.setEnabled(id, true);."
+    },
     "click_action_help_text": {
         "message": "Объект, определяющий, что происходит, когда вы кликаете на иконку расширения или используете горячую клавишу \"Перезагрузить расширение (основное действие)\", которую можно изменить пройдя по следующей ссылке: chrome://extensions/shortcuts.\n\nВозможные свойства:\n\nhard: boolean\nСледует ли перезагружать расширение. Если установлено значение false, фоновая страница не будет перезагружена. manifest.json не будет перезагружен, даже если установленно значение true. Если вы хотите перезагрузить этот файл, делайте это обычным способом. Может быть совмещено с свойством \"all tabs\".\n\nall tabs: boolean\nСледует ли перезагружать все вкладки, а не просто текущую.\n\next_id: string || false\nId расширения для перезагрузки в \"hard\" режиме. Если значение опущено или false, все расширения будут перезагружены.\n\nExample:\n\n{\n    \"all tabs\": false,\n    \"hard\": true,\n    \"ext_id\": \"ffhljpfecjcfjdaneehmhdgplkaafnbb\"\n}"
     },
@@ -31,6 +34,9 @@
     },
     "ports_label_text": {
         "message": "Порты"
+    },
+    "full_reload_timeout_label_text": {
+        "message": "Время ожидания полной перезагрузки (ms)"
     },
     "click_action_label_text": {
         "message": "Действие при клике на иконку расширения"
