--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -3,22 +3,19 @@
         "message": "Перезагрузагружайте распакованное расширение в один клик, горячей клавишей или автоматически."
     },
     "background_tab_title_text": {
-        "message": "Advanced Extension Reloader"
+        "message": "Фоновая вкладка"
     },
     "background_tab_manifest_3_msg_text": {
-        "message": "Эта вкладка необходима для правильной работы Advanced Extension Reloader, не закрывайте ее."
+        "message": "Это фоновая вкладка. Эта вкладка необходима для правильной работы Advanced Extension Reloader, не закрывайте ее."
     },
-    "soft_context_menu_item": {
-        "message": "soft"
+    "open_background_tab_context_menu_item": {
+        "message": "Открыть фоновую вкдадку"
     },
-    "hard_context_menu_item": {
-        "message": "hard"
+    "reload_section_text": {
+        "message": "Перезагрузка"
     },
-    "one_tab_context_menu_item": {
-        "message": "one tab"
-    },
-    "all_tabs_context_menu_item": {
-        "message": "all tabs"
+    "background_tab_section_text": {
+        "message": "Фоновая вкладка"
     },
     "ports_help_text": {
         "message": "Порты, разделяемые запятыми, которые должны ожидать сообщения для перезагрузки расширений. Если вы разрабатываете несколько расширений одновременно, вам понадобится несколько портов."
@@ -31,6 +28,9 @@
     },
     "context_menu_actions_help_text": {
         "message": "Массив объектов с той же схемой, что и в \"Действие при клике на иконку расширения\", который определяет дополнительные действия перезагрузки, которые появляются в контекстном меню иконки расширения. Имейте в виду, что количество элементов в контекстном меню ограничено. Вы также можете использовать эти действия перезагрузки, используя одну из горячих клавиш \"Перезагрузить расширение X\", где X - позиция в массиве."
+    },
+    "open_background_tab_automatically_help_text": {
+        "message": "Всегда держать одну фоновую вкладку открытой, открывая ее снова, если она закрыта."
     },
     "ports_label_text": {
         "message": "Порты"
@@ -46,6 +46,12 @@
     },
     "reload_notification_volume_label_text": {
         "message": "Громкость уведомления перезагрузки"
+    },
+    "open_background_tab_automatically_label_text": {
+        "message": "Автоматически открывать фоновую вкладку"
+    },
+    "open_position_in_tab_strip_label_text": {
+        "message": "Позиция в полосе вкладок при открытии"
     },
     "advanced_extension_reloader_for_chrome_link_text": {
         "message": "⚗️ Advanced Extension Reloader для Chrome"
