--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -6,7 +6,7 @@
         "message": "Фоновая вкладка"
     },
     "background_tab_manifest_3_msg_text": {
-        "message": "Это фоновая вкладка. Эта вкладка необходима для правильной работы Advanced Extension Reloader, не закрывайте ее."
+        "message": "Это фоновая вкладка. Эта вкладка необходима для правильной работы автоматической перезагрузки. Если вы перезагружаете расширение только по клику на иконку Advanced Extension Reloader эта вкладка не требуется. Вы можете отключить автоматическое открытие фоновой вкладки в насторойках."
     },
     "open_background_tab_context_menu_item": {
         "message": "Открыть фоновую вкдадку"
