feat: implement theme reload setting

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -47,6 +47,9 @@
     "reload_notification_volume_label_text": {
         "message": "Reload notification volume"
     },
+    "allow_theme_reload_label_text": {
+        "message": "Allow theme reload"
+    },
     "open_background_tab_automatically_label_text": {
         "message": "Open background tab automatically"
     },
