fix(messages): add missing localization

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -2,6 +2,9 @@
     "description": {
         "message": "Перезагружайте распакованное расширение в один клик, горячей клавишей или автоматически."
     },
+    "reload_section_text": {
+        "message": "Перезагрузка"
+    },
     "ports_help_text": {
         "message": "Порты, разделяемые запятыми, которые должны ожидать сообщения для перезагрузки расширений. Если вы разрабатываете несколько расширений одновременно, вам понадобится несколько портов."
     },
