--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -5,6 +5,9 @@
     "reload_section_text": {
         "message": "Перезагрузка"
     },
+    "docs_section_text": {
+        "message": "Документация"
+    },
     "ports_help_text": {
         "message": "Порты, разделяемые запятыми, которые должны ожидать сообщения для перезагрузки расширений. Если вы разрабатываете несколько расширений одновременно, вам понадобится несколько портов."
     },
@@ -31,6 +34,9 @@
     },
     "allow_theme_reload_label_text": {
         "message": "Позволить перезагружать тему"
+    },
+    "docs_link_text": {
+        "message": "📄 Документация"
     },
     "advanced_extension_reloader_chrome_link_text": {
         "message": "⚗️ Advanced Extension Reloader для Chrome"
