feat(settings): add reload action error messeage

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -38,6 +38,9 @@
     "allow_theme_reload_label_text": {
         "message": "Allow theme reload"
     },
+    "invalid_reload_action_input_error_text": {
+        "message": "Invalid settings. Click on the ? button to see the list of allowed poperties. Make sure you provided a valid JSON. Invalid settings won't be saved."
+    },
     "docs_link_text": {
         "message": "📄 Documentation"
     },
