feat: update docs links

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -54,7 +54,7 @@
         "message": "😼 Advanced Extension Reloader on Github"
     },
     "docs_link_href": {
-        "message": "https://github.com/loftyshaky/advanced-extension-reloader/blob/master/README.md"
+        "message": "https://github.com/loftyshaky/advanced-extension-reloader/blob/master/README.md#content"
     },
     "rate_chrome_link_href": {
         "message": "https://chromewebstore.google.com/detail/hagknokdofkmojolcpbddjfdjhnjdkae/reviews"
