feat(messages): update description

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
     "description": {
-        "message": "Перезагружайте распакованное расширение в один клик, горячей клавишей или автоматически."
+        "message": "Перезагружайте распакованное расширение одним кликом, горячей клавишей или автоматически (расширение для разработчиков)."
     },
     "reload_section_text": {
         "message": "Перезагрузка"
