feat(settings): add invalid ports error message

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -35,6 +35,9 @@
     "allow_theme_reload_label_text": {
         "message": "Позволить перезагружать тему"
     },
+    "invalid_ports_input_error_text": {
+        "message": "Недопустимые настройки. Разделяйте отдельные порты запятыми."
+    },
     "invalid_reload_action_input_error_text": {
         "message": "Недопустимые настройки. Кликните на кнопку ? чтобы просмотреть список разрешенных свойств. Убедитесь, что вы предоставили действительный JSON. Недопустимые настройки не будут сохранены."
     },
